# bricks

./: .gitignore  README.md  bricks.cabal
conor/: Brick.hs  CoDeBruijn.hs  Sketch.agda
haskell/: Check.hs  Indexed.hs  Natty.hs  Syntax.hs  Thinning.hs  Vec.hs
src/: Brick.agda  Bruck.agda  Indexed.hs  Natty.hs  Thinning.hs  Vec.hs
src/Data/: Brick.agda  Brickold.agda
writing/notes/: notes.tex
